# go-comscire

./: README.md  go.mod
Driver/: mac-os-x-x64.sh  ubuntu-x64.sh  ubuntu-x86.sh
Driver/libconfuse-3.0/: Makefile.in  config.h.in  configure  libconfuse.spec
Driver/libconfuse-3.0/doc/: Doxyfile  Makefile.in
Driver/libconfuse-3.0/doc/html/: annotated.html  classes.html  confuse_8h.html  confuse_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  examples.html  files.html  ftpconf_8c-example.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  reread_8c-example.html  simple_8c-example.html  structcfg__defvalue__t.html  structcfg__opt__t.html  structcfg__t.html  unioncfg__simple__t.html  unioncfg__value__t.html
Driver/libconfuse-3.0/doc/html/search/: all_1.js  defines_0.js  enumvalues_0.js  functions_0.js  searchdata.js  typedefs_0.js  variables_a.js
Driver/libconfuse-3.0/doc/man/man3/: cfg_defvalue_t.3  cfg_opt_t.3  cfg_simple_t.3  cfg_t.3  cfg_value_t.3  confuse.h.3
Driver/libconfuse-3.0/doc/tutorial-html/: ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  ar01s07.html  ar01s08.html  ar01s09.html  index.html
Driver/libconfuse-3.0/examples/: Makefile.in
Driver/libconfuse-3.0/m4/: Makefile.in
Driver/libconfuse-3.0/po/: confuse.pot  de.gmo  fr.gmo  sv.gmo
Driver/libconfuse-3.0/src/: Makefile.in
Driver/libconfuse-3.0/tests/: Makefile.in
Driver/libqwqng-1.4/: CMakeLists.txt  FTDI1Config.cmake  LICENSE  README  libqwqng-config.in  libqwqng.pc.in
Driver/libqwqng-1.4/QNGmeter/: CMakeLists.txt  QNGmeter.cpp
Driver/libqwqng-1.4/QNGmeter/RandTest/: ACBinomialChi2.cpp  ACBinomialChi2.h  ACBinomialChi2.old.cpp  AutoCorrelation.cpp  AutoCorrelation.h  Bias.cpp  Bias.h  BiasAndAC.cpp  BiasAndAC.h  BinomialChi2.cpp  BinomialChi2.h  BitCount.cpp  BitCount.h  Chi2.cpp  Chi2.h  Chi2.hpp  Entropy.cpp  Entropy.h  Gamma.cpp  Gamma.h  KolmogorovSmirnov.cpp  KolmogorovSmirnov.h  MT19937.cpp  MT19937.h  Monkey.cpp  Monkey.h  MonkeyBitmap.cpp  MonkeyBitmap.h  QuickLfsrCorrector.hpp  RandTest.h  Serial.cpp  Serial.h  Stat.cpp  Stat.h  Well44497.h  stdafx.cpp  stdafx.h
Driver/libqwqng-1.4/examples/: CMakeLists.txt  Clear.cpp  DeviceId.cpp  Diagnostics.cpp  ErrorHandling.cpp  RandBytes.cpp  RandInt32.cpp  RandNormal.cpp  RandUniform.cpp  Reset.cpp  RuntimeInfo.cpp
Driver/libqwqng-1.4/src/: CMakeLists.txt  qwqng.cpp  qwqng.hpp
